@@ -1163,15 +1163,16 @@ class Article implements Page {
 			$rootPart = $parts[0];
 			$user = User::newFromName( $rootPart, false /* allow IP users*/ );
 			$ip = User::isIP( $rootPart );
+			$block = Block::newFromTarget( $user, $user );
 
 			if ( !( $user && $user->isLoggedIn() ) && !$ip ) { # User does not exist
 				$outputPage->wrapWikiMsg( "<div class=\"mw-userpage-userdoesnotexist error\">\n\$1\n</div>",
 					array( 'userpage-userdoesnotexist-view', wfEscapeWikiText( $rootPart ) ) );
-			} elseif ( $user->isBlocked() ) { # Show log extract if the user is currently blocked
+			} elseif ( !is_null( $block ) && $block->getType() != Block::TYPE_AUTO ) { # Show log extract if the user is currently blocked
 				LogEventsList::showLogExtract(
 					$outputPage,
 					'block',
-					$user->getUserPage(),
+					MWNamespace::getCanonicalName( NS_USER ) . ':' . $block->getTarget(),
 					'',
 					array(
 						'lim' => 1,
