@@ -94,6 +94,8 @@ production.
 * Upgrade jStorage to v0.4.10.
 * {{!}} is now a magic word that produces the | character. This removes the need
   for Template:! for purposes such as passing pipes inside of parameters.
+* (bug 20790) The block log snippet on Special:Contributions and while
+  editing user and user talk pages now works for IP range blocks.
 
 === Bug fixes in 1.24 ===
 * (bug 49116) Footer copyright notice is now always displayed in user language
